# mcp-nr

./: .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  OUTILS.md  README.md  build.sh  local-build.sh  release.sh  review.md
rgaa/: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COVERAGE_FINAL.md  Dockerfile  README.md  RELEASE_NOTES.md  TODO.md  docker-compose.yml  pyproject.toml  release.sh
rgaa/.github/workflows/: ci.yml  release.yml
rgaa/docs/: API-ANNOTATIONS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  ERROR-MESSAGES.md  GUIDE_DEVELOPPEMENT.md  design-brainstorm-wip.md  inspector-test-report.md
rgaa/docs/superpowers/plans/: 2026-04-17-mcp-rgaa-v1.md  2026-04-18-parity-features.md  2026-04-19-audit-types.md  2026-04-24-refactoring-mcp-rgaa.md  2026-04-24-tool-quality-improvements.md  (+3 more)
rgaa/files/: analyseur.py  audit_types.json  data.py  preparer_donnees.py  rgaa_cache.json  rgaa_mcp.py
rgaa/tests/: conftest.py  test_admin_api.py  test_analyseur.py  test_architecture_parity.py  test_auth.py  test_conformite.py  test_docker_integration.py  test_integration_annotations.py  test_prompts.py  test_rate_limit.py  test_referentiel.py  test_routes_http.py  test_tools.py
rgesn/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
rgesn/docs/: GUIDE_DEVELOPPEMENT.md
rgesn/files/: data.py  preparer_donnees.py  rgesn_cache.json  rgesn_mcp.py
rgesn/tests/: conftest.py  test_architecture_parity.py  test_docker_integration.py  test_prompts.py  test_rgesn.py  test_routes_http.py  test_smoke.py  test_tools.py
(+86 files in other folders)
