[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rgaa"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "mcp-ref-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "coverage>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["files"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
